Account and Project Updation changes